@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19910724
+MANIFEST for ded, version t19910816
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
